Archive2/11/a11f0306cec548/output
main.cpp: In function 'int main()':
main.cpp:10:16: error: 'atoi' is not a member of 'std'
     int num1 = std::atoi(str1);
                ^
main.cpp:11:16: error: 'atoi' is not a member of 'std'
     int num2 = std::atoi(str2);
                ^
main.cpp:12:16: error: 'atoi' is not a member of 'std'
     int num3 = std::atoi(str3);
                ^
main.cpp:13:16: error: 'atoi' is not a member of 'std'
     int num4 = std::atoi(str4);
                ^
main.cpp:15:5: error: 'cout' is not a member of 'std'
     std::cout << "std::atoi(\"" << str1 << "\") is " << num1 << '\n';
     ^
main.cpp:16:5: error: 'cout' is not a member of 'std'
     std::cout << "std::atoi(\"" << str2 << "\") is " << num2 << '\n';
     ^
main.cpp:17:5: error: 'cout' is not a member of 'std'
     std::cout << "std::atoi(\"" << str3 << "\") is " << num3 << '\n';
     ^
main.cpp:18:5: error: 'cout' is not a member of 'std'
     std::cout << "std::atoi(\"" << str4 << "\") is " << num4 << '\n';
     ^
